zig/first-project/failure.txt
4365681688
4365681688
2
2
3
3
3
3
3
3
Compilation failed:
build/repl_10.c:27:23: error: use of undeclared identifier 'answer'
   27 |     printf("%lld\n", (answer + x));
      |                       ^
build/repl_10.c:27:32: error: use of undeclared identifier 'x'
   27 |     printf("%lld\n", (answer + x));
      |                                ^
2 errors generated.

Compilation failed:
build/repl_10.c:27:23: error: use of undeclared identifier 'answer'
   27 |     printf("%lld\n", (answer + x));
      |                       ^
build/repl_10.c:27:32: error: use of undeclared identifier 'x'
   27 |     printf("%lld\n", (answer + x));
      |                                ^
2 errors generated.

error: CompilationFailed
error: CompilationFailed
/Users/jimmyhmiller/Documents/Code/PlayGround/zig/first-project/src/repl.zig:171:17: 0x104151f3f in evalExpression (/Users/jimmyhmiller/Documents/Code/PlayGround/zig/first-project/src/repl.zig:171:17: 0x104151f3f in evalExpression (repl)
repl)
                return error.CompilationFailed;
                ^
                return error.CompilationFailed;
                ^
/Users/jimmyhmiller/Documents/Code/PlayGround/zig/first-project/src/repl.zig:48:9: 0x10415a767 in runFile (/Users/jimmyhmiller/Documents/Code/PlayGround/zig/first-project/src/repl.zig:48:9: 0x10415a767 in runFile (repl)
repl)
        try evalExpression(allocator, expr_str, &definitions_map, &definitions_order, &counter);
        ^
        try evalExpression(allocator, expr_str, &definitions_map, &definitions_order, &counter);
        ^
/Users/jimmyhmiller/Documents/Code/PlayGround/zig/first-project/src/repl.zig:217:16: /Users/jimmyhmiller/Documents/Code/PlayGround/zig/first-project/src/repl.zig:217:16: 0x10415ae77 in main (repl)
0x10415ae77 in main (repl)
        return try runFile(allocator, filename);
               ^
        return try runFile(allocator, filename);
               ^
